<resources>
    <!-- Titles -->
    <string name="app_name">KiloNotes</string>
    <string name="reg_new_ride">Nieuwe rit registreren</string>
    <string name="title_activity_main">Kilo Notes</string>
    <string name="tab_title_new_ride">Niewe Rit</string>
    <string name="tab_title_history">Geschiedenis</string>
    <string name="title_register_user">Nieuwe gebruiker</string>
    <string name="driven_km">Gereden kilometers: </string>
    <string name="amount_km">0 KM</string>
    <string name="title_login">Inloggen</string>
    <string name="action_refresh">Vernieuwen</string>
    <string name="section_format">no section format</string>
    <string name="title_activity_payments">Betalingen</string>
    <string name="title_activity_register">Registreren</string>
    <string name="payments_for">Betalingen voor</string>
    <string name="title_activity_about">Over KiloNotes</string>

    <!-- Menu items -->
    <string name="menu_item_logout">Uitloggen</string>
    <string name="menu_item_payment">Betalingen</string>
    <string name="menu_item_about">Over</string>

    <!-- Static texts -->
    <string name="txt_filter_until">tot</string>
    <string name="easter_egg">Kiekeboe!</string>
    <string name="price_of_filter">Prijs: </string>
    <string name="txt_unregistered">N/A</string>
    <string name="txt_version">Versie: </string>
    <string name="txt_developed_by">Ontwikkeld door: Casper Mons</string>
    <string name="download_update">Download KiloNotes update</string>

    <!-- Checkbox texts -->
    <string name="checkbox_payed">betaald: </string>
    <string name="checkbox_unregistered"> Niet geregistreerd</string>

    <!-- Button texts-->
    <string name="btn_login">Log in</string>
    <string name="btn_save">Opslaan</string>
    <string name="btn_reg_user"><u>Nieuwe gebruiker?</u></string>
    <string name="btn_have_acc"><u>Al een account?</u></string>
    <string name="btn_register">Registreren</string>
    <string name="btn_filter_date_start">Start datum</string>
    <string name="btn_filter_date_end">Eind datum</string>
    <string name="btn_filter_name">Filter naam</string>
    <string name="btn_no">Nee</string>
    <string name="btn_txt_cancel">Annuleren</string>
    <string name="btn_check_updates"><u>Check updates</u></string>

    <!-- EditText hints -->
    <string name="edit_email_hint">Email-adres: </string>
    <string name="edit_password_hint">Wachtwoord: </string>
    <string name="edit_start_distance_hint">Beginstand: </string>
    <string name="edit_end_distance_hint">Eindstand: </string>
    <string name="edit_confirm_pass_hint">Bevestigen: </string>
    <string name="edit_nick_name">Naam: </string>

    <!-- Alert dialogs -->
    <string name="alert_message_no_km">Het aantal gereden kilometers kon niet berekend worden. Controleer of beide velden juist zijn gevuld en probeer het opnieuw</string>
    <string name="alert_title_cant_save">Kan niet opslaan</string>
    <string name="alert_message_ride_saved">De nieuwe rit is opgeslagen.</string>
    <string name="alert_success">Succes!</string>
    <string name="alert_title_fail">Oeps! </string>
    <string name="alert_message_fail">Er is iets fout gegaan. Probeer het later opnieuw of neem contact op met de provider van deze app.</string>
    <string name="alert_title_ask_save">Opslaan?</string>
    <string name="alert_message_ask_save">Weet u zeker dat u deze rit wilt opslaan?</string>
    <string name="alert_confirm_yes">Ja</string>
    <string name="alert_confirm_stay">Blijven</string>
    <string name="alert_confirm_cancel">Annuleren</string>

    <string name="alert_title_ask_leave">KiloNotes sluiten</string>
    <string name="alert_message_ask_leave">Weet u zeker dat u de applicatie wilt verlaten?</string>
    <string name="alert_title_pass_too_short">Wachtwoord is te kort</string>
    <string name="alert_message_pass_too_short">Het wachtwoord moet minimaal uit 8 tekens bestaan</string>
    <string name="alert_title_pass_false_match">Wachtwoorden komen niet overeen</string>
    <string name="alert_message_pass_false_match">De wachtwoorden moeten overeen komen</string>
    <string name="alert_title_email_empty">Email-adres leeg</string>
    <string name="alert_message_email_empty">Vul uw email-adres in om een nieuwe gebruiker te maken</string>
    <string name="alert_title_reg_success">Gelukt!</string>
    <string name="alert_message_reg_success">Registratie voltooid, u kunt nu van start gaan in de App</string>
    <string name="alert_message_reg_fail">Er is iets fout gegaan bij het opslaan van de nieuwe gebruiker. Probeer het later nog eens.</string>
    <string name="alert_title_nickname_empty">Bijnaam leeg</string>
    <string name="alert_message_nickname_empty">Bedenk een korte bijnaam of initialen en vul deze in</string>
    <string name="alert_title_general_error">Oeps...</string>
    <string name="alert_message_nickname_error">Er is iets misgegaan bij het ophalen van de bijnaam. Probeer het later nog eens.</string>
    <string name="alert_title_filter_null">Geen resultaten</string>
    <string name="alert_message_filter_null">Er zijn geen ritten gevonden in de database.</string>
    <string name="alert_title_input_name">Filter naam</string>
    <string name="alert_message_input_name">Vul een naam in om te zoeken: </string>
    <string name="alert_title_claim_ride">Rit claimen</string>
    <string name="alert_message_claim_ride">Heeft u deze rit gereden?</string>
    <string name="alert_message_claimed">De rit is opgeslagen op uw naam.</string>
    <string name="alert_message_claim_failed">Kon rit niet opslaan onder uw naam, probeer het later nog eens.</string>
    <string name="alert_message_failed_check_updates">Er kon niet worden gecontroleerd op updates. Probeer het later opnieuw.</string>
    <string name="alert_title_update_available">Update beschikbaar!</string>
    <string name="alert_message_update_available">Druk op OK de update te downloaden</string>
    <string name="alert_title_no_update">Geen updates beschikbaar!</string>
    <string name="alert_message_no_update">KiloNotes is up to date.</string>
    <string name="alert_title_download_complete">Downloaden voltooid</string>
    <string name="alert_message_download_complete">De nieuwe versie is opgeslagen in downloads. Ga naar downloads om de app te updaten.</string>
    <string name="alert_title_confirm_make_payment">Betaling voltooien</string>
    <string name="alert_message_confirm_make_payment">Wilt u deze betaling opslaan als voltooid?</string>
    <string name="alert_title_finish_payment">Betaling voltooien</string>
    <string name="alert_message_finish_payment_fail">Er is iets misgegaan met het updaten van de betaling. Probeer het later nog eens</string>
    <string name="alert_message_finish_payment_success">Betaling is opgeslagen als voltooid!</string>

    <!-- Toasts -->
    <string name="toast_logout">Uitloggen...</string>
    <string name="toast_refresh">Vernieuwen...</string>
    <string name="toast_auth_fail">Kon niet inloggen, controleer uw gegevens</string>
    <string name="toast_auth_success">Ingelogd!</string>
    <string name="toast_refresh_history">Geschiedenis ophalen...</string>
    <string name="toast_refresh_last_ride">Eindstand van de laatste rit ophalen</string>
    <string name="toast_error">Er is iets misgegaan, probeer het later nog eens</string>
    <string name="toast_could_not_update">Kon de rekening niet updaten, probeer het later nog eens</string>

    <!-- List Texts -->
    <string name="list_until"> tot </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
