<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:gravity="center_horizontal"
    tools:context="com.example.caspe.kilonotes.activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/title_register_user"
                android:textColor="@color/title_def"
                android:textSize="25sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edit_nick_name"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/bg_edit_txt"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/edit_nick_name"
                android:textColorHint="@color/txt_hint"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_new_email"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/bg_edit_txt"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/edit_email_hint"
                android:textColor="@color/txt_edit_txt"
                android:textColorHint="@color/txt_hint"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_new_pass"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/bg_edit_txt"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/edit_password_hint"
                android:inputType="textPassword"
                android:textColorHint="@color/txt_hint"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/edit_confirm_pass"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/bg_edit_txt"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/edit_confirm_pass_hint"
                android:inputType="textPassword"
                android:textColorHint="@color/txt_hint"
                android:textSize="20sp" />

            <Button
                android:id="@+id/reg_btn"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/btn_def"
                android:text="@string/btn_register"
                android:textColor="@color/btn_txt_def"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_go_to_login"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="#00FFFFFF"
                android:text="@string/btn_have_acc"
                android:textColor="@color/txt_def"
                android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

</RelativeLayout>
