<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.caspe.kilonotes.fragments.HistoryFragment">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/filter_date_start"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/btn_def"
                    android:text="@string/btn_filter_date_start"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_txt_def" />

                <TextView
                    android:id="@+id/txt_until"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_toEndOf="@+id/filter_date_start"
                    android:layout_toRightOf="@+id/filter_date_start"
                    android:gravity="center_vertical"
                    android:text="@string/txt_filter_until"
                    android:textColor="@color/txt_def"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/filter_date_end"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginRight="10dp"
                    android:layout_toEndOf="@+id/txt_until"
                    android:layout_toRightOf="@+id/txt_until"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/btn_def"
                    android:text="@string/btn_filter_date_end"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_txt_def" />


                <Button
                    android:id="@+id/filter_name"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_toRightOf="@id/filter_date_end"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/btn_def"
                    android:text="@string/btn_filter_name"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_txt_def"
                    android:layout_marginRight="5sp"/>

                <TextView
                    android:layout_centerVertical="true"
                    android:id="@+id/price_of_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/filter_name"
                    android:text="test"
                    android:textColor="@color/txt_def"
                    android:textSize="15sp" />


                <ImageButton
                    android:id="@+id/btn_clear_filter"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:adjustViewBounds="true"
                    android:background="@color/bg_transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/delete" />

            </RelativeLayout>

            <ListView
                android:id="@+id/history_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/list_divider"
                android:dividerHeight="2dp" />

        </LinearLayout>

    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>
